[gd_scene load_steps=5 format=3 uid="uid://chvldwh2dohef"]

[ext_resource type="AudioStream" uid="uid://dju88uush8jmt" path="res://Resources/Sounds/SFX/Button1.wav" id="2_ngqxi"]
[ext_resource type="Script" path="res://Scenes/Menus/MenuComponents/menu_button.gd" id="2_pap3c"]
[ext_resource type="AudioStream" uid="uid://bw3btvdo0gl8t" path="res://Resources/Sounds/SFX/Button2.wav" id="3_lx7bh"]
[ext_resource type="Theme" uid="uid://w073xaxkj70j" path="res://Themes/menu_theme.tres" id="3_pnafq"]

[node name="MenuButton" type="Button"]
offset_right = 138.0
offset_bottom = 72.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_pnafq")
text = "Testing"
script = ExtResource("2_pap3c")

[node name="ButtonDownSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ngqxi")
bus = &"SFX"

[node name="ButtonUpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_lx7bh")
bus = &"SFX"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
